--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,9 @@
     <tr>
         <td><img src="static/assets/ncs_logo.png" height="60" alt=""> </td>
         <td><a href=".">Home</a></td>
+        <td><a href="project_info">Project Info</a></td>
+        <td><a href="wireframe">Wireframes</a></td>
+        <td><a href="team_roles">Team Roles</a></td>
     </tr>
 </table>
 <hr>
