--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,20 +1,586 @@
-<!-- Navigation Bar from bootstrap
-This HTML is setup as a fragment allowing it to be "included" by other HTML files via Jinja2
--->
-<html>
+<!DOCTYPE html>
+<html lang="en" >
 <head>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+
+    <style>
+        body{
+            font-family: Raleway, sans-serif;
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 400;
+            color: #212112;
+            background-color: #fff;
+            overflow-x: hidden;
+            transition: all 200ms linear;
+        }
+        ::selection {
+            color: #fff;
+            background-color: #8167a9;
+        }
+        ::-moz-selection {
+            color: #fff;
+            background-color: #8167a9;
+        }
+
+
+        /* #Navigation
+        ================================================== */
+
+        .start-header {
+            padding: 20px 0;
+            box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
+        }
+        .start-header.scroll-on {
+            box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
+            padding: 10px 0;
+            -webkit-transition : all 0.3s ease-out;
+            transition : all 0.3s ease-out;
+        }
+        .start-header.scroll-on .navbar-brand img{
+            height: 24px;
+            -webkit-transition : all 0.3s ease-out;
+            transition : all 0.3s ease-out;
+        }
+        .navigation-wrap{
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            -webkit-transition : all 0.3s ease-out;
+            transition : all 0.3s ease-out;
+        }
+        .navbar{
+            padding: 0;
+        }
+        .navbar-brand img{
+            height: 28px;
+            width: auto;
+            display: block;
+            filter: brightness(10%);
+            -webkit-transition : all 0.3s ease-out;
+            transition : all 0.3s ease-out;
+        }
+        .navbar-toggler {
+            float: right;
+            border: none;
+            padding-right: 0;
+        }
+        .navbar-toggler:active,
+        .navbar-toggler:focus {
+            outline: none;
+        }
+        .navbar-light .navbar-toggler-icon {
+            width: 24px;
+            height: 17px;
+            background-image: none;
+            position: relative;
+            border-bottom: 1px solid #000;
+            transition: all 300ms linear;
+        }
+        .navbar-light .navbar-toggler-icon:after,
+        .navbar-light .navbar-toggler-icon:before{
+            width: 24px;
+            position: absolute;
+            height: 1px;
+            background-color: #000;
+            top: 0;
+            left: 0;
+            content: '';
+            z-index: 2;
+            transition: all 300ms linear;
+        }
+        .navbar-light .navbar-toggler-icon:after{
+            top: 8px;
+        }
+        .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
+            transform: rotate(45deg);
+        }
+        .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
+            transform: translateY(8px) rotate(-45deg);
+        }
+        .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+            border-color: transparent;
+        }
+        .nav-link{
+            color: #212121 !important;
+            font-weight: 500;
+            transition: all 200ms linear;
+        }
+        .nav-item:hover .nav-link{
+            color: #8167a9 !important;
+        }
+        .nav-item.active .nav-link{
+            color: #777 !important;
+        }
+        .nav-link {
+            position: relative;
+            padding: 5px 0 !important;
+            display: inline-block;
+        }
+        .nav-item:after{
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            content: '';
+            background-color: #8167a9;
+            opacity: 0;
+            transition: all 200ms linear;
+        }
+        .nav-item:hover:after{
+            bottom: 0;
+            opacity: 1;
+        }
+        .nav-item.active:hover:after{
+            opacity: 0;
+        }
+        .nav-item{
+            position: relative;
+            transition: all 200ms linear;
+        }
+
+        /* #Primary style
+        ================================================== */
+
+        .bg-light {
+            background-color: #fff !important;
+            transition: all 200ms linear;
+        }
+        h1{
+            font-size: 48px;
+            line-height: 1.2;
+            font-weight: 700;
+            color: #212112;
+            text-align: center;
+        }
+        p{
+            text-align: center;
+            margin: 0;
+            padding-top: 10px;
+            opacity: 1;
+            transform: translate(0);
+            transition: all 300ms linear;
+            transition-delay: 1700ms;
+        }
+        body.yinzayne-animation p{
+            opacity: 0;
+            transform: translateY(40px);
+            transition-delay: 1700ms;
+        }
+        h1 span{
+            display: inline-block;
+            transition: all 300ms linear;
+            opacity: 1;
+            transform: translate(0);
+        }
+        body.yinzayne-animation h1 span:nth-child(1){
+            opacity: 0;
+            transform: translateY(-20px);
+        }
+        body.yinzayne-animation h1 span:nth-child(2){
+            opacity: 0;
+            transform: translateY(-30px);
+        }
+        body.yinzayne-animation h1 span:nth-child(3){
+            opacity: 0;
+            transform: translateY(-50px);
+        }
+        body.yinzayne-animation h1 span:nth-child(4){
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+        body.yinzayne-animation h1 span:nth-child(5){
+            opacity: 0;
+            transform: translateY(-50px);
+        }
+        body.yinzayne-animation h1 span:nth-child(6){
+            opacity: 0;
+            transform: translateY(-20px);
+        }
+        body.yinzayne-animation h1 span:nth-child(7){
+            opacity: 0;
+            transform: translateY(-40px);
+        }
+        body.yinzayne-animation h1 span:nth-child(8){
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+        body.yinzayne-animation h1 span:nth-child(9){
+            opacity: 0;
+            transform: translateY(-30px);
+        }
+        body.yinzayne-animation h1 span:nth-child(10){
+            opacity: 0;
+            transform: translateY(-20px);
+        }
+        h1 span:nth-child(1){
+            transition-delay: 1000ms;
+        }
+        h1 span:nth-child(2){
+            transition-delay: 700ms;
+        }
+        h1 span:nth-child(3){
+            transition-delay: 900ms;
+        }
+        h1 span:nth-child(4){
+            transition-delay: 800ms;
+        }
+        h1 span:nth-child(5){
+            transition-delay: 1000ms;
+        }
+        h1 span:nth-child(6){
+            transition-delay: 700ms;
+        }
+        h1 span:nth-child(7){
+            transition-delay: 900ms;
+        }
+        h1 span:nth-child(8){
+            transition-delay: 800ms;
+        }
+        h1 span:nth-child(9){
+            transition-delay: 600ms;
+        }
+        h1 span:nth-child(10){
+            transition-delay: 700ms;
+        }
+        body.yinzayne-animation h1 span:nth-child(11){
+            opacity: 0;
+            transform: translateY(30px);
+        }
+        body.yinzayne-animation h1 span:nth-child(12){
+            opacity: 0;
+            transform: translateY(50px);
+        }
+        body.yinzayne-animation h1 span:nth-child(13){
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        body.yinzayne-animation h1 span:nth-child(14){
+            opacity: 0;
+            transform: translateY(30px);
+        }
+        body.yinzayne-animation h1 span:nth-child(15){
+            opacity: 0;
+            transform: translateY(50px);
+        }
+        h1 span:nth-child(11){
+            transition-delay: 1300ms;
+        }
+        h1 span:nth-child(12){
+            transition-delay: 1500ms;
+        }
+        h1 span:nth-child(13){
+            transition-delay: 1400ms;
+        }
+        h1 span:nth-child(14){
+            transition-delay: 1200ms;
+        }
+        h1 span:nth-child(15){
+            transition-delay: 1450ms;
+        }
+        #switch,
+        #circle {
+            cursor: pointer;
+            -webkit-transition: all 300ms linear;
+            transition: all 300ms linear;
+        }
+        #switch {
+            width: 60px;
+            height: 8px;
+            border: 2px solid #8167a9;
+            border-radius: 27px;
+            background: #000;
+            position: relative;
+            display: block;
+            margin: 0 auto;
+            text-align: center;
+            opacity: 1;
+            transform: translate(0);
+            transition: all 300ms linear;
+            transition-delay: 1900ms;
+        }
+        body.yinzayne-animation #switch{
+            opacity: 0;
+            transform: translateY(40px);
+            transition-delay: 1900ms;
+        }
+        .switched #circle {
+            left: 43px;
+            box-shadow: 0 4px 4px rgba(26,53,71,0.25), 0 0 0 1px rgba(26,53,71,0.07);
+            background: #fff;
+        }
+        .nav-item .dropdown-menu {
+            transform: translate3d(0, 10px, 0);
+            visibility: hidden;
+            opacity: 0;
+            max-height: 0;
+            display: block;
+            padding: 0;
+            margin: 0;
+            transition: all 200ms linear;
+        }
+        .nav-item.show .dropdown-menu {
+            opacity: 1;
+            visibility: visible;
+            max-height: 999px;
+            transform: translate3d(0, 0px, 0);
+        }
+        .dropdown-menu {
+            padding: 10px!important;
+            margin: 0;
+            font-size: 13px;
+            letter-spacing: 1px;
+            color: #212121;
+            background-color: #fcfaff;
+            border: none;
+            border-radius: 3px;
+            box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
+            transition: all 200ms linear;
+        }
+        .dropdown-toggle::after {
+            display: none;
+        }
+
+        .dropdown-item {
+            padding: 3px 15px;
+            color: #212121;
+            border-radius: 2px;
+            transition: all 200ms linear;
+        }
+        .dropdown-item:hover,
+        .dropdown-item:focus {
+            color: #fff;
+            background-color: rgba(129,103,169,.6);
+        }
+
+        body.dark{
+            color: #fff;
+            background-color: #1f2029;
+        }
+        body.dark .navbar-brand img{
+            filter: brightness(100%);
+        }
+        body.dark h1{
+            color: #fff;
+        }
+        body.dark h1 span{
+            transition-delay: 0ms !important;
+        }
+        body.dark p{
+            color: #fff;
+            transition-delay: 0ms !important;
+        }
+        body.dark .bg-light {
+            background-color: #14151a !important;
+        }
+        body.dark .start-header {
+            box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.15);
+        }
+        body.dark .start-header.scroll-on {
+            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
+        }
+        body.dark .nav-link{
+            color: #fff !important;
+        }
+        body.dark .nav-item.active .nav-link{
+            color: #999 !important;
+        }
+        body.dark .dropdown-menu {
+            color: #fff;
+            background-color: #1f2029;
+            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.25);
+        }
+        body.dark .dropdown-item {
+            color: #fff;
+        }
+        body.dark .navbar-light .navbar-toggler-icon {
+            border-bottom: 1px solid #fff;
+        }
+        body.dark .navbar-light .navbar-toggler-icon:after,
+        body.dark .navbar-light .navbar-toggler-icon:before{
+            background-color: #fff;
+        }
+        body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+            border-color: transparent;
+        }
+
+
+
+
+        @media (max-width: 767px) {
+            h1{
+                font-size: 38px;
+            }
+            .nav-item:after{
+                display: none;
+            }
+            .nav-item::before {
+                position: absolute;
+                display: block;
+                top: 15px;
+                left: 0;
+                width: 11px;
+                height: 1px;
+                content: "";
+                border: none;
+                background-color: #000;
+                vertical-align: 0;
+            }
+            .dropdown-toggle::after {
+                position: absolute;
+                display: block;
+                top: 10px;
+                left: -23px;
+                width: 1px;
+                height: 11px;
+                content: "";
+                border: none;
+                background-color: #000;
+                vertical-align: 0;
+                transition: all 200ms linear;
+            }
+            .dropdown-toggle[aria-expanded="true"]::after{
+                transform: rotate(90deg);
+                opacity: 0;
+            }
+            .dropdown-menu {
+                padding: 0 !important;
+                background-color: transparent;
+                box-shadow: none;
+                transition: all 200ms linear;
+            }
+            .dropdown-toggle[aria-expanded="true"] + .dropdown-menu {
+                margin-top: 10px !important;
+                margin-bottom: 20px !important;
+            }
+            body.dark .nav-item::before {
+                background-color: #fff;
+            }
+            body.dark .dropdown-toggle::after {
+                background-color: #fff;
+            }
+            body.dark .dropdown-menu {
+                background-color: transparent;
+                box-shadow: none;
+            }
+        }
+    </style>
+
+    <script>
+        window.console = window.console || function(t) {};
+    </script>
+
+
+
+    <script>
+        if (document.location.search.match(/type=embed/gi)) {
+            window.parent.postMessage("resize", "*");
+        }
+    </script>
+
 
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #c27370; font-family: Trebuchet MS;">
 
-    <a class="navbar-brand" href="{{ url_for('index') }}">{{basename}}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<body translate="no" >
+<body class="yinzayne-animation">
 
-</nav>
+<div class="navigation-wrap bg-light start-header start-style">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="navbar navbar-expand-md navbar-light">
+
+                    <a class="navbar-brand" href="/" target="_blank"><img src="https://avchoiceenergy.com/wp-content/uploads/2016/12/yourCHOICE.png"></a>
+
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto py-4 py-md-0">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <!-- from old navbar-->
+
+                            <!-- search used:https://www.geeksforgeeks.org/how-to-add-custom-google-search-bar-inside-your-web-page/ -->
+                            <script async src="https://cse.google.com/cse.js?cx=9fcb66c3c34c1675d"></script>
+                            <div class="gcse-search"></div>
+                            </p>
+                        </ul>
+                    </div>
+
+
+
+
+
+                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="/index">Test</a>
+
+                        </div>
+                    </li>
+
+
+
+
+
+
+                    </ul>
+
+
+            </nav>
+        </div>
+    </div>
+</div>
+</div>
+
+
+</body>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+<script>
+    (function ($) {"use strict";
+
+        $(function () {
+            var header = $(".start-style");
+            $(window).scroll(function () {
+                var scroll = $(window).scrollTop();
+
+                if (scroll >= 10) {
+                    header.removeClass('start-style').addClass("scroll-on");
+                } else {
+                    header.removeClass("scroll-on").addClass('start-style');
+                }
+            });
+        });
+
+        //Animation
+
+        $(document).ready(function () {
+            $('body.yinzayne-animation').removeClass('yinzayne-animation');
+        });
+
+        //Menu On Hover
+
+        $('body').on('mouseenter mouseleave', '.nav-item', function (e) {
+            if ($(window).width() > 750) {
+                var _d = $(e.target).closest('.nav-item');_d.addClass('show');
+                setTimeout(function () {
+                    _d[_d.is(':hover') ? 'addClass' : 'removeClass']('show');
+                }, 1);
+            }
+        });
+
+    })(jQuery);
+</script>
+
+{% include "layouts/darkmode.html" %}
+
+</body>
+
+</html>
+
