--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -514,25 +514,25 @@
                     </div>
 
 
-
-
-
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="/index">Test</a>
+                            <a class="dropdown-item" href="/">Test</a>
 
                         </div>
+                    </li>
+                    <br>
+                    <br>
+
+                    <li class="nav-item active">
+                        <a class="dropdown-item" href="/attendance">Attendance</a>
                     </li>
 
 
 
 
 
-
                     </ul>
-
-
             </nav>
         </div>
     </div>
