--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -12,7 +12,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #c27370; font-family: Trebuchet MS;">
 
-    <a class="navbar-brand" href="{{ url_for('index') }}">{{basename}}</a>
+    <a class="navbar-brand" href="{{ url_for('main') }}">{{basename}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
