--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Attendance</title>
+    <title>Index</title>
+    {% extends "layouts/layout.html" %}
 </head>
 
 <body>
-
 </body>
+
+
 </html>
