--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -1,34 +1,151 @@
-<!-- This page is illustrative and contains ideas about HTML formatting -->
-<!doctype html>
+<!-- Custom file for standardizing Project Data
+This HTML is setup as as a Jinja2 layout, coders use layouts for:
+ ... standardization of style
+ ... setting expectations for data
+ ... code reuse
+-->
+<!DOCTYPE HTML>
 <html lang="en">
+
+
+{% set scrum_board = "https://github.com/Athena9355/Fire-Alarm/projects/1" %}
+{% set repo = "https://github.com/Athena9355/Fire-Alarm" %}
+
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        :root{
+            --white: whitesmoke;
+            --black: black;
+            --grey: grey;
+        }
 
-    <!-- JQuery CSS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        html, body{
+            margin: 0;
+            height: 100%;
+            animation: fadein 2s;
+            -moz-animation: fadein 2s; /* Firefox */
+            -webkit-animation: fadein 2s; /* Safari and Chrome */
+            -o-animation: fadein 2s; /* Opera */
+            background-color: var(--grey);
+            color: var(--black);
+        }
 
-    <!-- Common style for site -->
-    {% block colors %}
-        <link rel="stylesheet" type="text/css" href={{  url_for("static", filename="scss/custom.css", version='208') }}>
-    {% endblock %}
+        .dark-mode {
+            background-color: var(--white);
+            color: var(--black);
+        }
 
-    <!-- Use this block for page specific meta data -->
-    {% block meta %}
-        <title>Nighthawk Coding Society</title>
-    {% endblock %}
+        h1{
+            font-size: 5em;
+        }
+
+        a {
+            color: midnightblue;
+        }
+
+        .fa{
+            font-size: 3em;
+            letter-spacing: 1em;
+            transition: all .2s;
+            color: black;
+        }
+
+
+
+        .btn:link,
+        .btn:visited {
+            text-transform: uppercase;
+            text-decoration: none;
+            padding: 15px 40px;
+            display: inline-block;
+            border-radius: 100px;
+            transition: all .2s;
+            position: absolute;
+            color: black;
+            font-size: 2.5em;
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 20px 40px rgba(255, 255, 255, 0.2);
+        }
+
+        .btn:active {
+            transform: translateY(-1px);
+            box-shadow: 0 5px 10px rgba(255, 255, 255, 0.2);
+        }
+
+        .row{
+
+
+            margin: auto;
+        }
+
+    </style>
+
+    <title>Emergency Tech </title>
+
 </head>
-<body>
 
-<!-- CONTENT Block, utilize this block for page specific content  -->
-{% block content %}
+<body>
+{% include "layouts/navbar.html" %}
+
+{% block body %}
+    <div class="container-fluid">
+        <div class="row justify-content-end" style="padding: 2%;">
+            <div class="col-2" style="text-align: right;">
+                {% block info %}
+                    <!-- notice jinja style variables used in href's -->
+                    <a><h5>{{basename}}</h5></a>
+
+                {% endblock %}
+            </div>
+        </div>
+
+        <div class="product" style="margin-top: 2%;">
+            <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
+
+                <div class="col-8" >
+                    <h1 style="color: black">{{ project }} Emergency Tech</h1>
+                </div>
+
+            </div>
+
+            <div class="row" style="padding-left: 10%;">
+                {% block links %}
+                    <div class="col-3">
+                        <a href="{{ scrum_board }}" class="btn">Scrum Board</a>
+                    </div>
+
+                    <div class="col-3">
+                        <a href="{{ repo }}" class="btn">Repository</a>
+                    </div>
+                {% endblock %}
+            </div>
+
+        </div>
+    </div>
 {% endblock %}
 
-<!-- Footer Code -->
-<!-- Bootstrap 5.0 Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
+{% block background %}
+
+
+    <script>
+        VANTA.BIRDS({
+            el: "body",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            scaleMobile: 1.00
+        })
+    </script>
+{% endblock %}
+
 </html>
