--- a/templates/attendance_security_html/crud.html
+++ b/templates/attendance_security_html/crud.html
@@ -6,13 +6,13 @@
 <!-- CONTENT (in <head>), content for this page -->
 {% block meta %}
     <title>CRUD page</title>
-    <script src={{  url_for("static", filename="javascript/validation.js", version='101') }}></script>
-    <script src={{  url_for("static", filename="javascript/reload_page.js", version='101') }}></script>
+    <script src={{  url_for("crud.static", filename="javascript/validation.js", version='101') }}></script>
+    <script src={{  url_for("crud.static", filename="javascript/reload_page.js", version='101') }}></script>
 {% endblock %}
 
 <!-- CONTENT (in <body>), content for this page -->
 {% block content %}
-    <h1><a href={{ url_for('crud_logout') }}> Log Out </a></h1>
+    <h1><a href={{ url_for('crud.crud_logout') }}> Log Out </a></h1>
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom border-primary text-dark">
             <span class="fs-4">SQL CRUD Admin Page</span>
@@ -34,7 +34,7 @@
                         <tr>
                             <td></td>
                             <td></td>
-                            <td><a href={{url_for('crud')}}>Full Table </a></td>
+                            <td><a href={{url_for('crud.crud')}}>Full Table </a></td>
                             <td><a href="https://github.com/nighthawkcoders/nighthawk_csp/tree/master/crud">GitHub Source</a></td>
                         </tr>
                         </tbody>
@@ -82,7 +82,7 @@
         <div class="container bg-secondary py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
                 <h2>Create a new record</h2>
-                <form method="POST" ID="create" action={{url_for('create')}} >
+                <form method="POST" ID="create" action={{url_for('crud.create')}} >
                     <table class="table">
                         <thead>
                         <tr>
@@ -115,7 +115,7 @@
                 <div class="col-md-3">
                     <div class="p-5 mb-4 bg-light text-dark rounded-3">
                         <h2>Read</h2>
-                        <form method="POST" ID="read" action={{url_for('read')}} >
+                        <form method="POST" ID="read" action={{url_for('crud.read')}} >
                             <table id="read_table">
                                 <tr><th><label for="read_userid">ID</label></th></tr>
                                 <tr>
@@ -140,7 +140,7 @@
                 <div class="col-md-6">
                     <div class="p-5 mb-4 bg-light text-dark rounded-3">
                         <h2>Update</h2>
-                        <form method="POST" ID="update" action={{url_for('update')}} >
+                        <form method="POST" ID="update" action={{url_for('crud.update')}} >
                             <table id="update_table">
                                 <tr>
                                     <th><label for="update_userid">ID</label></th>
@@ -167,7 +167,7 @@
                 <div class="col-md-3">
                     <div class="p-5 mb-4 bg-light text-dark rounded-3">
                         <h2>Delete</h2>
-                        <form method="POST" ID="read" action={{url_for('delete')}} >
+                        <form method="POST" ID="read" action={{url_for('crud.delete')}} >
                             <table id="read_table">
                                 <tr><th><label for="delete_userid">ID</label></th></tr>
                                 <tr>
