--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -8,8 +8,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <html lang="en">
 
 
-{% set scrum_board = "https://github.com/Athena9355/Fire-Alarm/projects/1" %}
-{% set repo = "https://github.com/Athena9355/Fire-Alarm" %}
+{% set scrum_board = "https://github.com/sarayu-pr11/saas/projects/1" %}
+{% set repo = "https://github.com/sarayu-pr11/saas" %}
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -133,19 +133,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
 {% block background %}
 
+    <p style="background-image: url('https://images.unsplash.com/photo-1554734867-bf3c00a49371?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');"></p>
 
-    <script>
-        VANTA.BIRDS({
-            el: "body",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
 {% endblock %}
 
 </html>
