--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -521,12 +521,8 @@
                     </li>
 
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                        <a class="nav-link" href="/main"> Student Login <span class="sr-only">(current)</span></a>
-                    </li>
 
-                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-
-                        <a class="nav-link" href={{ url_for('crud') }}>SQL CRUD</a>
+                        <a class="nav-link" href={{ url_for('crud.crud') }}>Attendance</a>
                     </li>
 
 
