--- a/templates/attendance_security_html/crud_async.html
+++ b/templates/attendance_security_html/crud_async.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- EXTEND (layout.html), this is a template for all rendered pages in the project -->
-
+{% extends "layouts/login_layout.html" %}
 
 <!-- CONTENT (in <head>), content for this page -->
 {% block meta %}
