--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -525,6 +525,11 @@
                         <a class="nav-link" href={{ url_for('crud.crud') }}>Attendance</a>
                     </li>
 
+                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+
+                        <a class="nav-link" href="{{ url_for('student.main') }}">Student Login</a>
+                    </li>
+
 
 
                 </nav>
