--- a/templates/student_security_html/authorize_student.html
+++ b/templates/student_security_html/authorize_student.html
@@ -14,7 +14,7 @@
 
         <div class="container bg-secondary py-4">
             <div class="p-5 mb-4 bg-light text-dark rounded-3">
-                <form method="POST" ID="authUser" action={{url_for('main_authorize')}} >
+                <form method="POST" ID="authUser" action={{url_for('student.main_authorize')}} >
                     <table>
                         <tr><th><label for="user_name">Username</label></th></tr>
                         <tr><td><input type="text" id='user_name' name="user_name" size="20" required></td></tr>
@@ -27,7 +27,7 @@
                         <tr><th><label for="password2">Password Confirmation</label></th></tr>
                         <tr><td><input type="password" id='password2' name="password2" size="20" required></td></tr>
                         <tr><th><input type="submit" value="Submit"></th></tr>
-                        <tr><td><a href={{url_for('main_login')}}>Log In</a></td></tr>
+                        <tr><td><a href={{url_for('student.main_login')}}>Log In</a></td></tr>
                     </table>
                 </form>
             </div>
