reinstalled database - accustomed teacher admin ids

--- a/templates/attendance_security_html/crud.html
+++ b/templates/attendance_security_html/crud.html
@@ -15,7 +15,7 @@
     <h1><a href={{ url_for('crud.crud_logout') }}> Log Out </a></h1>
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom border-primary text-dark">
-            <span class="fs-4">SQL CRUD Admin Page</span>
+            <span class="fs-4">Teacher Admin Page</span>
         </header>
     </div>
     <div class="container py-4 text-light bg-success">
