--- a/templates/attendance_security_html/authorize.html
+++ b/templates/attendance_security_html/authorize.html
@@ -6,7 +6,7 @@
 
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom border-primary text-dark">
-            <span class="fs-4">SQL CRUD Sign Up Page</span>
+            <span class="fs-4">Teacher Sign Up Page</span>
         </header>
     </div>
 
