--- a/templates/attendance_security_html/login.html
+++ b/templates/attendance_security_html/login.html
@@ -6,7 +6,7 @@
 
     <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom border-primary text-dark">
-            <span class="fs-4">SQL CRUD Login Page</span>
+            <span class="fs-4">Teacher Login Page</span>
         </header>
     </div>
 
