--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -528,6 +528,10 @@
 
                         <a class="nav-link" href="{{ url_for('student.main') }}">Student Login</a>
                     </li>
+                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+
+                        <a class="nav-link" href="{{ url_for('quiz') }}">Quiz</a>
+                    </li>
 
                 </nav>
         </div>
