--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -519,7 +519,7 @@
         {
             numb: 5,
             question: "In the event you are in the bathroom during a lockdown, what do you do if there is no immediate danger?",
-            answer: "Go to the nearest classroom",
+            answer: "Stay in the bathroom",
             options: [
                 "Stay in the bathroom",
                 "Go back to your class",
