--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
     <tr>
         <td><a href=".">Home</a></td>
         <td><a href="project_info">Project Info</a></td>
-        <td><a href="wireframe">Designs</a></td>
+        <td><a href="designs">Designs</a></td>
         <td><a href="plans">Project Planning</a></td>
         <td><a href="team_roles">Team Roles</a></td>
     </tr>
