--- a/templates/attendance_security_html/crud.html
+++ b/templates/attendance_security_html/crud.html
@@ -13,6 +13,7 @@
 <!-- CONTENT (in <body>), content for this page -->
 {% block content %}
     <h1><a href={{ url_for('crud.crud_logout') }}> Log Out </a></h1>
+    <center><button onclick="attendance_redirect()"> click here </button></center>
     <center><h2 style ='...'> {{ current_user.name }} is logged in</h2></center>
 
     <div class="container py-4">
@@ -208,6 +209,12 @@
         <h1 id="BE-CONTROL">Back End Form Request and API Code (Control)</h1>
         <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fnighthawkcoders%2Fnighthawk_csp%2Fblob%2Fmaster%2Fcrud%2Fapp_crud.py&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on"></script>
     </div>
+
+    <script>
+    function attendance_redirect() {
+        location.href = '/attendance';
+    }
+    </script>
 
 {% endblock %}
 
