--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -529,6 +529,12 @@
 
                         <a class="nav-link" href="{{ url_for('quiz') }}">Quiz</a>
                     </li>
+                    </li>
+                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+
+                        <a class="nav-link" href={{ url_for('maps') }}>Maps</a>
+                    </li>
+
 
                 </nav>
         </div>
