coded the interactive maps and modified the navbar for accessibility

--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -32,7 +32,7 @@
         h1{
             font-size: 5em;
             font-family:'Monotype Corsiva';
-            color: #1e5209;
+            color:ghostwhite;
         }
         .button1 {border-radius: 8px;}
         .button2 {border-radius: 8px;}
