--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -525,16 +525,16 @@
                         <a class="nav-link" href={{ url_for('crud.crud') }}>Attendance</a>
                     </li>
 
+
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Tools</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="/quiz">Quiz</a>
+                            <a class="dropdown-item" href="/maps">Interactive Map</a>
 
-                        <a class="nav-link" href="{{ url_for('quiz') }}">Quiz</a>
-                    </li>
-                    </li>
-                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
 
-                        <a class="nav-link" href={{ url_for('maps') }}>Maps</a>
+                        </div>
                     </li>
-
 
                 </nav>
         </div>
