--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <style>
         body{
@@ -467,6 +470,92 @@
                 box-shadow: none;
             }
         }
+
+        body {
+            margin: 0;
+            font-family: "Bell MT";
+        }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+        li {
+            position: relative;
+            padding: 0 10px;
+            height: 100%;
+            display: flex;
+        }
+        a {
+            z-index: 1;
+            color: white;
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 18px;
+            padding: 10px 5px;
+        }
+        li::before {
+            content: "";
+            position: absolute;
+            height: 33.3%;
+            width: 0;
+            background-color: goldenrod;
+            right: 0;
+            z-index: 0;
+            top: 33.33%;
+            transition: all 0.5s;
+        }
+        li::after {
+            content: "";
+            position: absolute;
+            height: 33.3%;
+            width: 0;
+            background-color: goldenrod;
+            left: 0;
+            z-index: 0;
+            bottom: 0;
+            transition: all 0.5s;
+        }
+        a::before {
+            position: absolute;
+            content: "";
+            height: 33.3%;
+            width: 0;
+            background-color: goldenrod;
+            bottom: 130%;
+            left: 0;
+            transition: all 0.5s;
+        }
+
+
+        .button {
+            background-color: white;
+            border: none;
+            color: white;
+            padding: 8px 16px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+        }
+
+        .button1 {
+            border: 2px solid #111B2D;
+            background-color: white;
+            color: #111B2D;
+        }
+
+        .button1:hover {
+            background-color: #111B2D;
+            color: white;
+        }
     </style>
 
     <script>
@@ -515,7 +604,9 @@
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="/aadya">Aadya (test) </a>
+{#                            <a class="dropdown-item" href="/aadya">Aadya (test) </a>#}
+                            <a class="dropdown-item" href="/saumyaaboutme">Saumya </a>
+
 
                         </div>
                     </li>
