idk why the (C.R.U.D)1 routes go to the CRUD routes, but other than that it works. Also, layout extended 😏😏😏😏

--- a/templates/attendance_security_html/crud_attendance.html
+++ b/templates/attendance_security_html/crud_attendance.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 
 <!-- EXTEND (navbar2.html), this is a template for all rendered pages in the project -->
+{% extends "layouts/login_layout.html" %}
 
-{% set page_title = "CRUD Page" %}
-{% set page_description = "CRUD Database!" %}
-{% set img = "https://media.timeout.com/images/105787696/630/472/image.jpg" %}
 
 
 
