--- a/templates/maps.html
+++ b/templates/maps.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
+{% include "layouts/login_layout.html" %}
 <meta charset="UTF-8">
 {#    {% extends "layouts/login_layout.html" %}#}
 <h2>Google Maps</h2>
