--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -471,6 +471,28 @@
                 "Go to the nearest classroom"
             ]
         },
+        {
+            numb: 6,
+            question: "What is the best way to prepare for school emergencies",
+            answer: "Make a plan with your teacher",
+            options: [
+                "Wing it",
+                "Run away immediately",
+                "Make a plan with your teacher",
+                "Make a plan with your friends"
+            ]
+        },
+        {
+            numb: 7,
+            question: "What should you do with the red backpack?",
+            answer: "Take it with you during evacuation",
+            options: [
+                "Take it with you during evacuation",
+                "Leave it in the classroom",
+                "Hide it",
+                "Throw it outside"
+            ]
+        },
     ];
 </script>
 <script>
