--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -5,9 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <body>
-    <h1>SAAS EMERGENCY TECH</h1>
-</body>
-    <style>
+<style>
 
         html, body{
             margin: 0;
@@ -16,7 +14,7 @@
             -moz-animation: fadein 2s; /* Firefox */
             -webkit-animation: fadein 2s; /* Safari and Chrome */
             -o-animation: fadein 2s; /* Opera */
-            background-color: #be98d7;
+            background-color: #000000;
             line-height: 2 ;
             line-grid-mode: 2;
         }
@@ -100,6 +98,7 @@
         .button4 {border-radius: 8px;}
 
     </style>
+
 
     {% block meta %}
     {% endblock %}
