--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,243 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
-    {% extends "layouts/layout.html" %}
+    {% include "layouts/layout.html" %}
 </head>
+<h1>SAAS EMERGENCY TECH</h1>
+<style>
+        html, body{
+        margin: 0;
+        height: 100%;
+        animation: fadein 2s;
+        -moz-animation: fadein 2s; /* Firefox */
+        -webkit-animation: fadein 2s; /* Safari and Chrome */
+        -o-animation: fadein 2s; /* Opera */
+        background-color: #475d98;
+        text-decoration-color: white;
+        line-height: 2 ;
+        line-grid-mode: 2;
+    }
 
-<body>
-{% block background %}
-    <style>
-        body {
-        }
+    * {
+        box-sizing: border-box;
+    }
+
+    body {
+        margin: 0;
+        font-family: "Bell MT";
+    }
+    .header {
+        text-align: center;
+        padding: 32px;
+    }
+
+* {box-sizing: border-box}
+    body {font-family: Verdana, sans-serif; margin:0}
+    .mySlides {display: none}
+    img {vertical-align: middle;}
+    /* Slideshow container */
+    .slideshow-container {
+        max-width: 1000px;
+        position: relative;
+        margin: auto;
+    }
+    /* Next & previous buttons */
+    .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -22px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+    }
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover, .next:hover {
+        background-color: rgba(255, 255, 255, 0.8);
+    }
+    /* Caption text */
+    .text {
+        font-family: "Arial Rounded MT Bold";
+        color: #F2F2F2;
+        font-size: 15px;
+        padding: 8px 12px;
+        position: absolute;
+        bottom: 8px;
+        width: 100%;
+        text-align: center;
+    }
+    /* Number text (1/3 etc) */
+    .numbertext {
+        color: #F2F2F2;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+    }
+    /* The dots/bullets/indicators */
+    .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+    .active, .dot:hover {
+        background-color: #717171;
+    }
+    /* Fading animation */
+    .fade {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+    @-webkit-keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
+    }
+    @keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
+    }
+    /* On smaller screens, decrease text size */
+    @media only screen and (max-width: 300px) {
+        .prev, .next,.text {font-size: 11px}
+    }
 </style>
+</head>
+<style>
+    * {
+        box-sizing: border-box;
+    }
+    body {
+        margin: 0;
+        font-family: "Bell MT";
+    }
+    .header {
+        text-align: center;
+        padding: 32px;
+    }
+    /* Create two equal columns that floats next to each other */
+    .column {
+        float: left;
+        width: 30%;
+        padding: 10px;
+    }
+    .column img {
+        margin-top: 12px;
+    }
+    /* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+</style>
+
+<div>
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="/templates/saumya_images/2-booktalk-quakeland.jpg"width="200"height="400">
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="/templates/saumya_images/LockdownPic.jpg"width="200"height="400">
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="/templates/saumya_images/rawImage.jpg"width="200"height="400">
+        </div>
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(+1)">&#10095;</a>
+    </div>
+    <br>
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+</div>
+        <script>
+            var slideIndex = 1;
+            showSlides(slideIndex);
+            function plusSlides(n) {
+                showSlides(slideIndex += n);
+            }
+            function currentSlide(n) {
+                showSlides(slideIndex = n);
+            }
+            function showSlides(n) {
+                var i;
+                var slides = document.getElementsByClassName("mySlides");
+                var dots = document.getElementsByClassName("dot");
+                if (n > slides.length) {slideIndex = 1}
+                if (n < 1) {slideIndex = slides.length}
+                for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                }
+                for (i = 0; i < dots.length; i++) {
+                    dots[i].className = dots[i].className.replace(" active", "");
+                }
+                slides[slideIndex-1].style.display = "block";
+                dots[slideIndex-1].className += " active";
+            }
+        </script>
+
+
+</style>
+<div class="center-block" style="margin: 2% 5% 5%; text-align:center; font-family: 'Bell MT';">
+    <div class="col-12">
+        <div class="paragraph">
+            <div class="paragraph">
+                <div class="header">
+                    <h2>Check these out for more information</h2>
+                    <h3>Welcome to SAAS</h3>
+                </div>
+            </div>
+            <a href="http://127.0.0.1:8000/saumyaapi" >
+                <button type="button" class="btn btn-info">Bomb Threats</button>
+            </a>
+            <a href="https://docs.google.com/document/d/1WC-hJG7004eQKXM2YUE2qaSMz-np1TbH1yH0t7bJceE/edit?usp=sharing" >
+                <button type="button" class="btn btn-info">Shootings</button>
+            </a>
+            <a href="http://127.0.0.1:8000/saumyaapi" >
+                <button type="button" class="btn btn-info">Fires</button>
+            </a>
+            <a href="http://127.0.0.1:8000/saumyaapi" >
+                <button type="button" class="btn btn-info">Earthquakes</button>
+            </a>
+            <a href="http://127.0.0.1:8000/saumyaapi" >
+                <button type="button" class="btn btn-info">Floods</button>
+            </a>
+            <a href="http://127.0.0.1:8000/saumyaapi" >
+                <button type="button" class="btn btn-info">General Guidelines (First Aid Procedures)</button>
+            </a>
+
+            <body>
+
+
+            {% block background %}
+
+
 {% endblock %}
 </body>
 
