--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -599,15 +599,15 @@
                     </div>
 
 
-                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
-                        <div class="dropdown-menu">
+{#                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">#}
+{#                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>#}
+{#                        <div class="dropdown-menu">#}
 {#                            <a class="dropdown-item" href="/aadya">Aadya (test) </a>#}
-                            <a class="dropdown-item" href="/saumyaaboutme">Saumya </a>
-
-
-                        </div>
-                    </li>
+{#                            <a class="dropdown-item" href="/saumyaaboutme">Saumya </a>#}
+{##}
+{##}
+{#                        </div>#}
+{#                    </li>#}
 
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
 
