voice search basic implemented

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -605,6 +605,8 @@
 
 
 
+
+
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                         <a class="nav-link" href="/about_us">The Dev Team!</a>
                     </li>
@@ -621,6 +623,7 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="/quiz">Quiz</a>
                             <a class="dropdown-item" href="/maps">Interactive Map</a>
+                            <a class="dropdown-item" href="/speech">Voice Search</a>
 
 
                         </div>
