css for about us and voice search page implemented.

--- a/templates/speech.html
+++ b/templates/speech.html
@@ -2,7 +2,7 @@
 <head>
     {% include "layouts/navbar.html" %}
 </head>
-<body>
+<body style="background-color:tan;">
 <h1>Voice Search</h1>
 <p>Click on the below button and speak something...</p>
 <p><button type="button" onclick="runSpeechRecognition()">Speech to Text</button> &nbsp; <span id="action"></span></p>
