--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -5,8 +5,8 @@
     <title>About Us</title>
     {% include "layouts/navbar.html" %}
 </head>
+<body style="background-color:darkseagreen;">
 
-<body>
 <h1> The Development Team</h1>
 <center><h2>Aadya Daita</h2></center>
 <h5>Hello everyone, hope you like our website! Below are a few things about me :)
@@ -16,12 +16,12 @@
     the feature where each teacher is able to redirect to their student database.
 </h5>
 <br>
-<img alt="" src="/static/insta.png" style="height: 300px" id="aadya" />
+<img class="column" alt="" src="/static/insta.png" style="height: 300px" id="aadya" />
 
 <br>
 <br>
 <br>
-<h2>Arushi </h2>
+    <center><h2>Arushi </h2></center>
 <h5>Hey y'all! Hope you enjoy our site! Helped out with the technical in our website, and also added additional pbl features.<br>
     <strong>Role: Scrum Master and Deployment - </strong> I am the scrum master and I organize our group's tasks. Lastly, I was
     responsible for deplyment on our website.
@@ -33,27 +33,27 @@
 
 <br>
 <br>
-<h2>Sarayu </h2>
+    <center><h2>Sarayu </h2></center>
 <h5>Hey! My name is Sarayu, and the I am super pumped you are here!<br>
     <strong>Role: GitHub Admin - </strong>I handle all matters that revolve around GitHub. These include handling merges, and branches.
     Additionally, I worked on pbl features, and making our project more technical.
 <br>
 
-    <img alt="" src="/static/saraju.png" style="height: 400px" id="sarayu" />
+    <img alt="" src="/static/sarayu.jpg" style="height: 400px" id="sarayu" />
 </h5>
 
 
 <br>
 <br>
 <br>
-<h2>Saumya </h2>
+    <center><h2>Saumya </h2></center>
 <h5>Hi guys! I worked on pbl features on the website. <br>
     <strong>Role: Design manager - </strong> My main role
     was design manager, so I was responsible for making our website appealing.
 
 
 <br>
-    <img alt="" src="/static/saumya.png" style="height: 300px" id="saumya" />
+    <img alt="" src="/static/saumya.jpg" style="height: 300px" id="saumya" />
 </h5>
 
 
@@ -62,12 +62,3 @@
 
 
 
-<style>
-    h3.text {
-
-    }
-
-
-
-
-</style>
