index page with updated routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -215,23 +215,28 @@
                     <h3>Welcome to SAAS</h3>
                 </div>
             </div>
-            <a href="http://127.0.0.1:5224/BombThreat" >
+            <a href="http://127.0.0.1:5224/bomb" >
                 <button type="button" class="btn btn-warning">Bomb Threats</button>
 
             </a>
-            <a href="http://127.0.0.1:5224/SchoolShootings" >
+            <a href="http://127.0.0.1:5224/shooting" >
                 <button type="button" class="btn btn-dark">Shootings</button>
             </a>
 {#            <a href="http://127.0.0.1:5224/Fires" >#}
 {#                <button type="button" class="btn btn-info">Fires</button>#}
 {#            </a>#}
-            <a href="http://127.0.0.1:5224/Earthquakes" >
-                <button type="button" class="btn btn-danger">Earthquakes and Fires</button>
+            <a href="http://127.0.0.1:5224/earthquake" >
+                <button type="button" class="btn btn-info">Earthquakes</button>
             </a>
-            <a href="http://127.0.0.1:5224/Floods" >
+
+            <a href="http://127.0.0.1:5224/fire" >
+                <button type="button" class="btn btn-danger">Fires</button>
+            </a>
+
+            <a href="http://127.0.0.1:5224/flood" >
                 <button type="button" class="btn btn-success">Floods</button>
             </a>
-            <a href="http://127.0.0.1:5224/GeneralGuidelines" >
+            <a href="http://127.0.0.1:5224/guidelines" >
                 <button type="button" class="btn btn-light">General Guidelines (First Aid Procedures)</button>
             </a>
 
