--- a/templates/events/earthquake.html
+++ b/templates/events/earthquake.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Earthquake/Fires</title>
+    <title>Earthquake</title>
     <style>
         html, body{
             margin: 0;
