--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -630,6 +630,7 @@
                             <a class="dropdown-item" href="/quiz">Quiz</a>
                             <a class="dropdown-item" href="/maps">Interactive Map</a>
                             <a class="dropdown-item" href="/speech">Voice Search</a>
+                            <a class="dropdown-item" href="notes/notes">Notes</a>
 
 
                         </div>
