--- a/templates/notes.html
+++ b/templates/notes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% include 'layouts/layout.html' %}
     <meta charset="UTF-8">
 <body>
 <h2>Notes for {{ user.name }}</h2>
