pushing bc Sarayu asked me to

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -608,7 +608,7 @@
 
 
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                        <a class="nav-link" href="/about_us">The Dev Team!</a>
+                        <a class="nav-link" href="/about_us">Team!</a>
                     </li>
 
 
@@ -619,7 +619,27 @@
 
                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
 
-                        <a class="nav-link" href={{ url_for('emergencycontacts') }}>EMERGENCY CONTACTS</a>
+                        <a class="nav-link" href={{ url_for('emergencycontacts') }}>Emergency</a>
+                    </li>
+
+                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+
+                        <a class="nav-link" href={{ url_for('upload.upload') }}>Uploads</a>
+                    </li>
+
+
+                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+
+                    </li>
+
+
+
+
+
+
+                    <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+
+                        <a class="nav-link" href={{ url_for('notes.notes') }}>Notes</a>
                     </li>
 
 
@@ -641,10 +661,11 @@
                         <a class="nav-link" href={{ url_for('contact') }}>Contact</a>
                     </li>
 
+
                 </nav>
+            </div>
         </div>
     </div>
-</div>
 </div>
 
 
@@ -691,4 +712,3 @@
 </body>
 
 </html>
-
