--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -11,7 +11,7 @@
 <center><h2>Aadya Daita</h2></center>
 <h5>Hello everyone, hope you like our website! Below are a few things about me :)
     I'm a sophomore in Del Norte High School, and I am passionate about learning computer science!
-<br>
+    <br>
     <strong>Role: Technical Officer - </strong>I was responsible for adding the login feature to the teach database. Additionally, I added
     the feature where each teacher is able to redirect to their student database.
 </h5>
@@ -21,11 +21,11 @@
 <br>
 <br>
 <br>
-    <center><h2>Arushi </h2></center>
+<center><h2>Arushi Bharadwaj</h2></center>
 <h5>Hey y'all! Hope you enjoy our site! Helped out with the technical in our website, and also added additional pbl features.<br>
     <strong>Role: Scrum Master and Deployment - </strong> I am the scrum master and I organize our group's tasks. Lastly, I was
-    responsible for deplyment on our website.
-<br>
+    responsible for deployment on our website.
+    <br>
     <img alt="" src="/static/arushi.jpg" style="height: 400px" id="arushi" />
 </h5>
 
@@ -33,11 +33,11 @@
 
 <br>
 <br>
-    <center><h2>Sarayu </h2></center>
+<center><h2>Sarayu Pochimireddy</h2></center>
 <h5>Hey! My name is Sarayu, and the I am super pumped you are here!<br>
     <strong>Role: GitHub Admin - </strong>I handle all matters that revolve around GitHub. These include handling merges, and branches.
     Additionally, I worked on pbl features, and making our project more technical.
-<br>
+    <br>
 
     <img alt="" src="/static/sarayu.jpg" style="height: 400px" id="sarayu" />
 </h5>
@@ -46,19 +46,16 @@
 <br>
 <br>
 <br>
-    <center><h2>Saumya </h2></center>
+<center><h2>Saumya Palakodety</h2></center>
 <h5>Hi guys! I worked on pbl features on the website. <br>
     <strong>Role: Design manager - </strong> My main role
     was design manager, so I was responsible for making our website appealing.
 
 
-<br>
+    <br>
     <img alt="" src="/static/saumya.jpg" style="height: 300px" id="saumya" />
 </h5>
 
 
 </body>
 </html>
-
-
-
